[DS-707] Don't create instances of boxed primitives without need.
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5470 9c30dcfa-912a-0410-8fc2-9e0234be79fd